--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="/storage/emulated/0/new pro/IMG_20250404_090627.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG_20250404_090627.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Charulatha G</h1>
             <p>Am computer engineer</p>
         </div>
@@ -202,7 +202,7 @@
         <div class="section-content">
             <center>
                 <h2>Resume</h2>
-                <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+                <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
             </center>
         </div>
     </section>
